--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -11,6 +11,10 @@ web_profiler:
     toolbar: true
     intercept_redirects: false
 
+doctrine:
+    dbal:
+        path: '%kernel.project_dir%/app/sqlite.db'
+
 monolog:
     handlers:
         main:
