formulaire ajout/modif article

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,15 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes:
+        - bootstrap_3_layout.html.twig
+        # - bootstrap_3_horizontal_layout.html.twig
+        # - bootstrap_4_layout.html.twig
+        # - bootstrap_4_horizontal_layout.html.twig
+
+        # Foundation
+        # - foundation_5_layout.html.twig
+
 
 # Doctrine Configuration
 doctrine:
