--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,11 @@ app:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+# fos_user_register:
+#     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#     prefix: /register
+#
+# fos_user_resetting:
+#     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+#     prefix: /resetting
