--- a/app/config/config.yml.dist
+++ b/app/config/config.yml.dist
@@ -6,11 +6,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -37,7 +37,15 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    form_themes: ['bootstrap_4_layout.html.twig']
+    form_themes:
+        - bootstrap_3_layout.html.twig
+        # - bootstrap_3_horizontal_layout.html.twig
+        # - bootstrap_4_layout.html.twig
+        # - bootstrap_4_horizontal_layout.html.twig
+
+        # Foundation
+        # - foundation_5_layout.html.twig
+
 
 # Doctrine Configuration
 doctrine:
@@ -78,3 +86,8 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+
+easy_admin:
+    entities:
+        - AppBundle\Entity\Product
+        - AppBundle\Entity\User
