--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,8 @@ fos_user:
 # fos_user_resetting:
 #     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
 #     prefix: /resetting
+
+easy_admin_bundle:
+    resource: "@EasyAdminBundle/Controller/AdminController.php"
+    type:     annotation
+    prefix:   /admin
