--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,11 +11,16 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN]
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
+        chain_provider:
+            chain:
+                providers:
+                  - in_memory
+                  - fos_userbundle
         in_memory:
             memory:
                 users:
                     super_admin:
-                        password: password
+                        password: super_pass
                         roles: 'ROLE_ADMIN'
         fos_userbundle:
             # id: fos_user.user_provider.username
@@ -38,7 +43,7 @@ security:
             #form_login: ~
             pattern: ^/
             form_login:
-                provider: fos_userbundle
+                # provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
             remember_me:
               secret: '%secret%'
@@ -52,3 +57,5 @@ security:
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/article/edit/, role: ROLE_ADMIN }
         - { path: ^/article/add, role: ROLE_ADMIN }
+        - { path: ^/product/edit/, role: ROLE_ADMIN }
+        - { path: ^/product/add, role: ROLE_ADMIN }
