--- a/composer.json
+++ b/composer.json
@@ -64,11 +64,7 @@
         "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
-            "file": "app/config/parameters.yml",
-            "env-map": {
-              "database_url": "DATABASE_URL",
-              "monolog_action_level": "LOG_LEVEL"
-            }
+            "file": "app/config/parameters.yml"
         },
         "branch-alias": {
             "dev-master": "3.3-dev"
