--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,6 +14,7 @@ fos_user:
 #     prefix: /resetting
 
 easy_admin_bundle:
-    resource: "@EasyAdminBundle/Controller/AdminController.php"
+    # resource: "@EasyAdminBundle/Controller/AdminController.php"
+    resource: "@AppBundle/Controller/AdminController.php"
     type:     annotation
     prefix:   /admin
